# ml-reproducible-systems

./: .dockerignore  Dockerfile  Makefile  README.md  README2.md  classify.py  clean_books.py  environment.yml  environment_clean.yml  fetch_data.py  pyproject.toml  requirements.txt  scrape_books.py  train.py
.sandboxA/: pyvenv.cfg
.sandboxA/Scripts/: activate  activate.bat
.sandboxA_new/: pyvenv.cfg
.sandboxA_new/Scripts/: activate  activate.bat
.sandboxB/: pyvenv.cfg
.sandboxB/Scripts/: activate  activate.bat
deployment/: ci.yml
models/: model.pkl  vectorizer.pkl
reports/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md
src/: classify.py  fetch_data.py  processor.py  scrape_books.py
tests/: test_processor.py
week-experiments/: week3_makefile
week-experiments/Week1/: week1_README.md
week-experiments/Week2/: week2_README.md
week-experiments/Week3/: week3_README.md  week3_makefile
week-experiments/Week4/: environmet.yml  train.py  week4_README.md
week-experiments/Week5/: week5_README.md  week5_makefile
week-experiments/Week6/: week6_README.md  week6_makefile
