[tool.poetry]
name = "mystery-box"
version = "0.1.0"
description = "A fun reproducibility demo with Docker + secrets"
authors = ["Sooyoung <s.lee_6@tilburguniversity.edu>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
scikit-learn = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
